Fixes bug in case card not showing the correct background when attribute has a formula.

--- a/v3/src/components/case-card/case-attr-view.scss
+++ b/v3/src/components/case-card/case-attr-view.scss
@@ -43,12 +43,6 @@
         text-align: left;
       }
 
-      &.formula-attr-value {
-        background-color: rgba(255, 255, 0, 0.2);
-        font-style: italic;
-        pointer-events: none;
-      }
-
       span {
         border-radius: 0;
         display: inline-block;
@@ -97,6 +91,10 @@
       align-items: center;
       height: 25px;
       padding: 4px;
+
+      span {
+        height: 13px;
+      }
     }
 
     .rdg-text-editor {
@@ -108,6 +106,12 @@
       display: inline-block;
       height: 25px;
       padding: 4px;
+    }
+
+    .formula-attr-value {
+      background-color: rgba(255, 255, 0, 0.2);
+      font-style: italic;
+      pointer-events: none;
     }
   }
 }
